# Bluerov2

./: README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/include/core/: Attitude.h  Bar30.h  Set_depth.h  Set_heading.h  Set_target.h  Set_velocity.h  State.h
devel/include/tritech_micron/: ScanConfig.h  TritechMicronConfig.h
devel/lib/core/: Imu_bridge_raw.py  bridge.py  commander.py  gamepad.py  node  sitl.py  user_mav  video
devel/lib/pkgconfig/: core.pc  som_wall_detection.pc  tritech_micron.pc
devel/lib/tritech_micron/: csv_to_pointcloud.py  scan.py
devel/share/core/cmake/: core-msg-extras.cmake  core-msg-paths.cmake  coreConfig.cmake
devel/share/som_wall_detection/cmake/: som_wall_detectionConfig.cmake
devel/share/tritech_micron/cmake/: tritech_micron-msg-extras.cmake  tritech_micron-msg-paths.cmake  (+1 more)
src/core/: CMakeLists.txt
src/core/launch/: bluerov2_node.launch  gazebo.launch  gazebo_sitl.launch  gazebo_teleop.launch  gazebo_test.launch  rviz.launch
src/som_wall_detection/: CMakeLists.txt  README.md
src/som_wall_detection/launch/: launch_me.launch
src/som_wall_detection/nodes/: generalized_self_organising_map.py  self_organising_map.py  sonar_wall_detector  standard_self_organising_map.py
src/som_wall_detection/rosbags/: RatzeburgerSee-2019-01-22-15-05-01-short.bag  RatzeburgerSee-2019-01-22-15-05-01.bag
src/som_wall_detection/rviz/: my_rviz_config.rviz
src/som_wall_detection/src/som_wall_detection/: my_module.py
src/tritech_micron/launch/: tritech_micron.launch
src/tritech_micron/rviz/: sonar.rviz
(+26 files in other folders)
